refactor: stream toList()로 변경